--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.20)
 
 if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   if(DEFINED ENV{VITASDK})
@@ -7,14 +7,16 @@ if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
     message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
   endif()
 endif()
+include("$ENV{VITASDK}/share/vita.cmake" REQUIRED)
 
-project(setdip)
-include("${VITASDK}/share/vita.cmake" REQUIRED)
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nostdlib -Wall -Wextra -Wpedantic -O3 -std=gnu99")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -nostdlib")
 
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wl,-q -Wall -O3")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti -fno-exceptions")
+project(setdip LANGUAGES C ASM)
 
-enable_language(C ASM)
+include_directories(
+  include
+)
 
 add_executable(setdip
   src/kernel.c
@@ -24,13 +26,14 @@ target_link_libraries(setdip
   SceKblForKernel_365_stub
 )
 
-set_target_properties(setdip
-  PROPERTIES LINK_FLAGS "-nostdlib"
-)
-
 vita_create_self(setdip.skprx setdip
   CONFIG exports.yml
   UNSAFE
 )
 
-vita_create_stubs(stubs_setdip setdip ${CMAKE_CURRENT_SOURCE_DIR}/exports.yml KERNEL)
+add_custom_target(copy_skprx ALL
+  COMMAND ${CMAKE_COMMAND} -E copy
+  "${CMAKE_CURRENT_BINARY_DIR}/setdip.skprx"
+  "${CMAKE_BINARY_DIR}/../bin/setdip.skprx"
+  DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/setdip.skprx"
+)
